@@ -35,7 +35,7 @@ if (count($this->items[$this->parent->id]) > 0 && $this->maxLevelcat != 0) :
 		<?php endif; ?>
         <?php endif; ?>
 		<?php if ($this->params->get('show_cat_num_articles_cat') == 1) :?>
-			<dl class="article-count"><dt>
+			<dl><dt>
 				<?php echo JText::_('COM_CONTENT_NUM_ITEMS'); ?></dt>
 				<dd><?php echo $item->numitems; ?></dd>
 			</dl>
