@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+20-Feb-2011 Jean-Marie Simonet
+ # [#24916] Missing class blog_children
+ 
 19-Feb-2011 Jean-Marie Simonet
  # [#24978] duplicate code weblink .php
  # [#24545] Stripped code in contents and custom html module. Thanks Amy and Janich.
